--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,14 +1,12 @@
-[
-  {
-    "name": "local",
-    "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
-    "username": "root",
-    "password": "",
-    "database": "parking-app",
-    "synchronize": "true",
-    "logging": "true",
-    "entities": ["./src/entity/*.*"]
-  }
-]
+{
+  "name": "default",
+  "type": "mysql",
+  "host": "localhost",
+  "port": 3306,
+  "username": "root",
+  "password": "",
+  "database": "parking-app",
+  "synchronize": "true",
+  "logging": "true",
+  "entities": ["./src/entity/*.*"]
+}
